Correction of load profile
1) Correct the loading profile when 2 curve (bug)
2) Translate "Sonde" so change "CPU_Sonde" to "CPU_Sensor" (same for
GPU)

--- a/TCD_Settings/profile/pulse_power.yaml
+++ b/TCD_Settings/profile/pulse_power.yaml
@@ -2,7 +2,7 @@ ProfileName: "Pulse Power"
 Cmd1: "sleep 5 && /opt/RyzenAdj/ryzenadj --stapm-limit=25000 --fast-limit=25000 --slow-limit=25000"
 Cmd2: ""
 Dedicated_GPU: false
-CPU_Sonde: 1
+CPU_Sensor: 1
 CPU_LowDelay: 2
 CPU_LowTemp: 72
 CPU_HighTemp: 92
